fix: ligter margins for modal elements on mobile

--- a/stylus/components/modals.styl
+++ b/stylus/components/modals.styl
@@ -63,6 +63,7 @@ $modals
 
         +small-screen()
             font-size 1.25rem
+            margin-bottom .5rem
 
     .coz-btn-modal-close
         position         absolute
@@ -95,6 +96,7 @@ $modals
                 display flex
                 flex-direction column-reverse
                 flex-shrink 0
+                margin-top .5rem
                 button
                     width 100%
                     margin-left 0
